--- a/train.ipynb
+++ b/train.ipynb
@@ -70,11 +70,11 @@
     "  return (f, input_image, label_image)\n",
     "\n",
     "\n",
-    "validation_files = input_files[:5]\n",
-    "validation_loader = Loader(validation_files, 5, processor=data_processor)\n",
-    "validation_loader.start()\n",
-    "validation_batch = validation_loader.get_batch(5)\n",
-    "validation_loader.stop()\n",
+    "test_files = input_files[:5]\n",
+    "test_loader = Loader(test_files, 5, processor=data_processor)\n",
+    "test_loader.start()\n",
+    "test_batch = test_loader.get_batch(5)\n",
+    "test_loader.stop()\n",
     "\n",
     "batch_size = 2\n",
     "train_files = input_files[5:]\n",
@@ -119,11 +119,11 @@
     "    summary_writer.add_summary(summary, step)\n",
     "    #print(time.time() - startTime, step, error)\n",
     "    if step % (100 / batch_size) == 0:\n",
-    "      filenames = validation_batch[0]\n",
-    "      input_images = validation_batch[1]\n",
-    "      label_images = validation_batch[2]\n",
+    "      filenames = test_batch[0]\n",
+    "      input_images = test_batch[1]\n",
+    "      label_images = test_batch[2]\n",
     "\n",
-    "      validation_error, learning_rate, result, summary = sess.run([m.error, m.learning_rate, m.result, m.test_summary], feed_dict={ \n",
+    "      test_error, learning_rate, result, summary = sess.run([m.error, m.learning_rate, m.result, m.test_summary], feed_dict={ \n",
     "        m.input_image: input_images,  \n",
     "        m.label_image: label_images,\n",
     "        m.is_train: False\n",
@@ -131,7 +131,7 @@
     "\n",
     "      summary_writer_test.add_summary(summary, step)\n",
     "\n",
-    "      print(\"{0}: step {1}; train {2}; test {3}; lrate {4};\".format(time.time() - startTime, step, error, validation_error, learning_rate))\n",
+    "      print(\"{0}: step {1}; train {2}; test {3}; lrate {4};\".format(time.time() - startTime, step, error, test_error, learning_rate))\n",
     "\n",
     "      filename = filenames[0]\n",
     "      result_image = result[0].reshape((1500, 1500))\n",
